--- a/src/app/admin-interface/admin-interface.component.scss
+++ b/src/app/admin-interface/admin-interface.component.scss
@@ -634,6 +634,9 @@ top: 10.9rem;
     background-color: rgba(0, 204, 255, 0.095);
     scale: 1;
 }
+.uneditTie {
+    left: -3.62rem!important;
+}
 
 .ordersTitle {
     font-family: cursive;
