--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -181,6 +181,7 @@
           <h5 *ngIf="productReviews.length <= 0">no reviews on this one yet</h5>
           <div class="decorInsideDiv" *ngIf="productReviews.length > 0">
             <div class="reviewDiv" *ngFor="let review of productReviews">
+              <button class="homeReviewDeleteButton">X</button>
             <h5>user: {{userNames[review.userId] || 'Loading...'}} {{userLastnames[review.userId] || 'tvirtavs...'}}</h5>
             <p>user id: {{review.userId}}</p>
             <p>rated with {{review.rating}} stars</p>
