--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1076,7 +1076,17 @@ gap: 1rem;
 }
 
 .homeReviewDeleteButton {
-
+position: absolute;
+right: 1.5rem;
+margin-top: 0.3rem;
+background-color: transparent;
+color: rgb(0, 46, 66);
+border: none;
+font-size: larger;
+}
+.homeReviewDeleteButton:hover {
+  scale: 1.3;
+  color: rgb(0, 145, 255);
 }
 
 
