--- a/src/app/user-interface/user-interface.component.html
+++ b/src/app/user-interface/user-interface.component.html
@@ -49,6 +49,7 @@
             <div class="promoDiv">
         <h3>buy promocode for 5$</h3>
         <h4>and get 1 week benefits</h4>
+        <p>(demo) code: Lambda works for 2 weeks</p>
         <h5 *ngIf="promoSuccess">your promo code: {{promoCode}}</h5>
         <button (click)="buyingPromo = true" *ngIf="!buyingPromo" class="buyPromoButton">buy now</button>
         <div class="cardDivForPromo" *ngIf="buyingPromo">
