--- a/src/app/sales/sales.component.scss
+++ b/src/app/sales/sales.component.scss
@@ -13,6 +13,11 @@
     gap: 1rem;
 }
 
+.demo {
+    color: rgba(0, 128, 0, 0.687);
+    margin-left: 5rem;
+}
+
 .product img {
    width: 100%;
   height: 200px;
