--- a/src/app/sales/sales.component.html
+++ b/src/app/sales/sales.component.html
@@ -8,6 +8,7 @@
 
 
 <div class="divAboveMainDiv">
+  <h5 class="demo">demo: use promocode "Lambda" for additional discount after check out</h5>
   <h3 class="saleTitle">{{sale.name}}</h3>
   <div class="saleEndsDiv">
   <h4 class="endsIn">Sale ends in:</h4>
