--- a/src/app/admin-interface/admin-interface.component.html
+++ b/src/app/admin-interface/admin-interface.component.html
@@ -197,10 +197,11 @@
   </div>
 
       <div class="saleProdsDiv" *ngFor="let sale of allSales">
-         <div class="saleEndsDiv">
-  <h4 class="endsIn">Sale ends in:</h4>
-   <h4 [ngClass]="getSaleClass(sale)"> {{getDaysLeft(sale)}}</h4>
-   <h4 class="daysEnd">days</h4>
+         <div class="saleEndsDiv" >
+  <h4 class="endsIn" *ngIf="getDaysLeft(sale) > 0">Sale ends in:</h4>
+   <h4 [ngClass]="getSaleClass(sale)" *ngIf="getDaysLeft(sale) > 0"> {{getDaysLeft(sale)}}</h4>
+   <h4 class="daysEnd" *ngIf="getDaysLeft(sale) > 0">days</h4>
+   <h4 *ngIf="getDaysLeft(sale) === 0">sale ended</h4>
 </div>
           <button class="deleteSaleButton" (click)="removeSale(sale.id)">delete sale</button>
        <p>sale id: {{sale.id}}</p>
