--- a/src/app/user-interface/user-interface.component.scss
+++ b/src/app/user-interface/user-interface.component.scss
@@ -448,6 +448,10 @@ scale: 1.1;
     opacity: 1;
 }
 
+.addAddressMainDiv:focus-within {
+    opacity: 1;
+}
+
 .addAddressButton:hover {
     background-color: #00d8fee8;
     scale: 1.1;
@@ -472,6 +476,10 @@ scale: 1.1;
 .buyPromoCodeDiv:hover {
     opacity: 1;
 }
+.buyPromoCodeDiv:focus-within {
+    opacity: 1;
+}
+
 .buyPromoCodeDiv h3 {
     font-weight: 600;
     color: rgba(57, 0, 127, 0.554);
