--- a/src/app/user-interface/user-interface.component.html
+++ b/src/app/user-interface/user-interface.component.html
@@ -53,6 +53,15 @@
         <button (click)="buyingPromo = true" *ngIf="!buyingPromo" class="buyPromoButton">buy now</button>
         <div class="cardDivForPromo" *ngIf="buyingPromo">
        
+            <div class="nonGlobals">
+                <div (click)="selectedVoucherId = voucher.id" class="voucher" *ngFor="let voucher of availableNonGlobalVouchers">
+
+                    <h5 class="voucherHs">voucher: {{voucher.name}}</h5>
+                    <h6 class="voucherHs">description: {{voucher.description}}</h6>
+                    <h6 class="voucherHs voucherDiscount">discount: {{voucher.discountValue}} %</h6>
+                </div>
+            </div>
+
             <input placeholder="payment method" class="lastPromoInp" [(ngModel)]="voucherPaymentMethod" type="text">   
         <input placeholder="card number (16 digits)" class="lastPromoInp" [(ngModel)]="voucherCardNumber" type="text">
         <input placeholder="cvv" class="lastPromoInp" [(ngModel)]="voucherCvv" type="text">
