--- a/src/app/user-interface/user-interface.component.scss
+++ b/src/app/user-interface/user-interface.component.scss
@@ -611,3 +611,8 @@ margin: 0.7rem 0rem 0.7rem 0rem;
 .voucherDiscount {
     color: rgb(0, 255, 42);
 }
+
+.selected-voucher {
+    background-color: rgb(0, 198, 79);
+    scale: 1.03;
+}
