--- a/src/app/user-interface/user-interface.component.scss
+++ b/src/app/user-interface/user-interface.component.scss
@@ -616,3 +616,10 @@ margin: 0.7rem 0rem 0.7rem 0rem;
     background-color: rgb(0, 198, 79);
     scale: 1.03;
 }
+
+.nonGlobals:focus-within {
+    opacity: 1;
+}
+.voucher:focus-within {
+    opacity: 1;
+}
