--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -72,8 +72,8 @@
 <button class="adminButton" *ngIf="AdminLoggedIn" (click)="goToAdminPanel()">Admin Panel</button>
 <button class="userButton" *ngIf="!AdminLoggedIn && loggedIn" (click)="goToUserPanel('orders')">My Orders</button>
 
-<div class="loggedInDiv" *ngIf="loggedIn">
-  <i class="fa-solid fa-circle-user primaryLoginButton" (click)="goToUserPanel('userInfo')"></i>
+<div class="loggedInDiv" *ngIf="loggedIn" (click)="goToUserPanel('userInfo')">
+  <i class="fa-solid fa-circle-user primaryLoginButton" ></i>
   <p>{{userResponse.email}}</p>
 </div>
 
