--- a/src/app/admin-interface/admin-interface.component.html
+++ b/src/app/admin-interface/admin-interface.component.html
@@ -10,6 +10,7 @@
     <ul [class.active]="activePanel === 'users'" (click)="switchPanel('users')">Manage Users</ul>
     <ul [class.active]="activePanel === 'categories'" (click)="switchPanel('categories')">Manage Categories</ul>
     <ul [class.active]="activePanel === 'sales'" (click)="switchPanel('sales')">Manage Sales</ul>
+    <ul [class.active]="activePanel === 'promos'" (click)="switchPanel('promos')">Manage Promos</ul>
   </div>
 
   
