--- a/src/app/admin-interface/admin-interface.component.html
+++ b/src/app/admin-interface/admin-interface.component.html
@@ -271,6 +271,25 @@
 </div>
 
 
+
+<div class="promos" *ngIf="activePanel === 'promos'">
+
+
+<div class="globalPromos">
+  <h3>global promos</h3>
+  <div class="globalsDiv">
+  <div class="globalPromo"></div>
+  </div>
+</div>
+<div class="nonGlobalPromos">
+  <h3>non global promos</h3>
+  <div class="nonGlobalsDiv">
+    <div class="nonGlobalPromo"></div>
+  </div>
+</div>
+</div>
+
+
 </div>
 
 
