--- a/src/app/admin-interface/admin-interface.component.html
+++ b/src/app/admin-interface/admin-interface.component.html
@@ -274,20 +274,27 @@
 
 <div class="promos" *ngIf="activePanel === 'promos'">
 
-
-<div class="globalPromos">
-  <h3>global promos</h3>
-  <div class="globalsDiv">
-  <div class="globalPromo"></div>
+  <div class="addPromoDiv">
+    <h3>add promo code</h3>
   </div>
-</div>
+
 <div class="nonGlobalPromos">
   <h3>non global promos</h3>
   <div class="nonGlobalsDiv">
     <div class="nonGlobalPromo"></div>
   </div>
 </div>
+
+
+<div class="globalPromos">
+  <h3>global promos (many time use for demo testing)</h3>
+  <div class="globalsDiv">
+  <div class="globalPromo"></div>
+  </div>
 </div>
+
+</div>
+
 
 
 </div>
